<resources>
    <string name="app_name">Eventrain</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_text_button">Login</string>
    <string name="register_text_button">Register</string>
    <string name="trainImage">trainImage</string>
    <string name="date">Date</string>
    <string name="eventTextView">Event</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="enable_sms_notifications">Enable SMS Notifications</string>
    <string name="update_notifications_permissions">Update Notifications Permissions</string>
    <string name="home_title">Home</string>
    <string name="data_title">Events</string>
    <string name="settings_title">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_fragment">Hot Dogs</string>
    <string name="sms_fragement">SMS Settings</string>
    <string name="data_fragment">Upcoming Events</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homepage">HomePage</string>
    <string name="add_event">Add Event</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Event Date</string>
    <string name="event_notes">Event Notes</string>

</resources>