<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_event">

    <fragment
        android:id="@+id/navigation_event"
        android:name="com.gerardogonzalez.gerardo_gonzalez_event_tracking.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_login"/>
    <fragment
        android:id="@+id/navigation_data"
        android:name="com.gerardogonzalez.gerardo_gonzalez_event_tracking.DataFragment"
        android:label="@string/date"
        tools:layout="@layout/fragment_data_fragement"/>
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.gerardogonzalez.gerardo_gonzalez_event_tracking.SettingFragment"
        android:label="@string/enable_sms_notifications"
        tools:layout="@layout/fragment_setting"/>


</navigation>