<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingFragment">

    <TextView
        android:id="@+id/settingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55sp"
        android:text="@string/settings_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/settings"
        />

    <TextView
        android:id="@+id/SMS_settingMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_sms_notifications"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/SMS_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Switch
        android:id="@+id/SMS_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60sp"
        android:minWidth="60sp"
        android:minHeight="60sp"
        app:layout_constraintStart_toEndOf="@id/SMS_settingMessage"
        app:layout_constraintBaseline_toBaselineOf="@id/SMS_settingMessage"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btnRequestPermission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update_notifications_permissions"
        android:layout_marginBottom="30sp"
        android:layout_marginStart="60sp"
        android:layout_marginEnd="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>


</androidx.constraintlayout.widget.ConstraintLayout>